--- a/prost-types/Cargo.toml
+++ b/prost-types/Cargo.toml
@@ -18,6 +18,7 @@ std = ["prost/std"]
 
 [dependencies]
 prost = { version = "0.13.3", path = "../prost", default-features = false, features = ["prost-derive"] }
+serde = { version = "1.0.204", features = ["derive"] }
 
 [dev-dependencies]
 proptest = "1"
