--- a/prost-types/Cargo.toml
+++ b/prost-types/Cargo.toml
@@ -19,6 +19,7 @@ std = ["prost/std"]
 [dependencies]
 prost = { version = "0.13.3", path = "../prost", default-features = false, features = ["prost-derive"] }
 serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
 
 [dev-dependencies]
 proptest = "1"
