--- a/prost-types/Cargo.toml
+++ b/prost-types/Cargo.toml
@@ -17,7 +17,7 @@ default = ["std"]
 std = ["prost/std"]
 
 [dependencies]
-prost = { version = "0.13.1", path = "../prost", default-features = false, features = ["prost-derive"] }
+prost = { version = "0.13.1-serde1", path = "../prost", default-features = false, features = ["prost-derive"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 
